Make bfs more generic, reformat Code