@@ -2,13 +2,10 @@ package tech.corvin.aoc.day10;
 
 import tech.corvin.aoc.general.Helper;
 import tech.corvin.aoc.general.Part;
-import tech.corvin.aoc.general.grid.Coordinate;
 import tech.corvin.aoc.general.grid.Grid;
 
 import java.io.IOException;
-import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.List;
 
 public class Part1 implements Part<Integer> {
 
@@ -21,7 +18,14 @@ public class Part1 implements Part<Integer> {
     private int getScore(Grid<Integer> map) {
         return map.findAll(0)
                 .stream()
-                .map((c) -> map.bfs(c, 9, (current, next) -> map.getCell(current) + 1 == map.getCell(next)).stream().distinct().collect(Collectors.toList()))
+                .map((c) -> map.bfs(
+                                c,
+                                9,
+                                map::getOrthogonalCells,
+                                (current, next) -> map.getCell(current) + 1 == map.getCell(next))
+                        .stream()
+                        .distinct()
+                        .toList())
                 .mapToInt(List::size)
                 .sum();
     }
